--- a/circle-tiling.html
+++ b/circle-tiling.html
@@ -18,6 +18,9 @@
                 this.p = p;
                 this.r = r;
             }
+            draw(cnt) {
+                cnt.arc(this.p.x, this.p.y, this.r, 0, 2*Math.PI);
+            }
             inverse(pos) {
                 let ip = this.p.sub(pos);
                 return new Circle(
@@ -32,6 +35,11 @@
                     1/this.r
                 );
             }
+            uniform(pos) {
+                let d = this.p.sub(pos);
+                let l = d.len();
+                return new Uniform(d.div(l), l - this.r, 1/this.r);
+            }
         }
 
         class Segment {
@@ -41,6 +49,7 @@
             }
             draw(cnt) {
                 if (Math.abs(this.s) < EPS) {
+                    //cnt.moveTo(this.vs[0].x, this.vs[0].y);
                     cnt.lineTo(this.vs[1].x, this.vs[1].y);
                 } else {
                     let a = this.vs[0];
@@ -106,48 +115,23 @@
         }
 
         class Triangle {
-            constructor(vertices, sigmas) {
+            constructor(vertices, arcs) {
                 this.vertices = vertices;
-                this.sigmas = sigmas;
-            }
-            seg(i) {
-                return new Segment(
-                    this.vertices[i%3],
-                    this.vertices[(i+1)%3],
-                    this.sigmas[i%3]
-                );
+                this.arcs = arcs;
             }
             draw(cnt) {
-                cnt.fillStyle = "rgb(127,127,127)";
                 cnt.beginPath();
                 for (let i = 0; i < 3; ++i) {
-                    this.seg(i).draw(cnt);
+                    this.arcs[i].draw(cnt);
                 }
                 cnt.closePath();
-                cnt.fill();
-            }
-            draw_uni(cnt, pos) {
-                for (let i = 0; i < 3; ++i) {
-                    cnt.strokeStyle = "rgb(0,0,0)";
-                    cnt.beginPath();
-                    this.seg(i).uniform(pos).draw(cnt, pos);
-                    cnt.stroke();
-                }
-            }
-            draw_inv(cnt, pos) {
-                for (let i = 0; i < 3; ++i) {
-                    cnt.strokeStyle = "rgb(0,0,0)";
-                    cnt.beginPath();
-                    this.seg(i).uniform(pos).inverse().draw(cnt, pos);
-                    cnt.stroke();
-                }
             }
             incircle() {
                 let pos = this.vertices[0];
 
-                let ur = this.seg(0).uniform(pos).inverse();
-                let uo = this.seg(1).uniform(pos).inverse();
-                let ul = this.seg(2).uniform(pos).inverse();
+                let ur = this.arcs[0].uniform(pos).inverse();
+                let uo = this.arcs[1].uniform(pos).inverse();
+                let ul = this.arcs[2].uniform(pos).inverse();
 
 
                 let dr = ur.d.lr();
@@ -184,32 +168,59 @@
 
                 return (new Circle(ic, ir)).inverse(pos);
             }
-            draw_inner(cnt) {
-                cnt.strokeStyle = "rgb(0,0,0)";
-
-                cnt.beginPath();
+            nearest(pos) {
+                let points = [];
                 for (let i = 0; i < 3; ++i) {
-                    this.seg(i).draw(cnt);
+                    let u = this.arcs[i].uniform(pos);
+                    points.push(pos.add(u.d.mul(u.l)));
                 }
-                cnt.stroke();
-                
-                let ic = this.incircle();
-                console.log(ic.p.toString());
-
-                cnt.beginPath();
-                cnt.arc(ic.p.x, ic.p.y, ic.r, 0, 2*Math.PI);
-                cnt.stroke();
+                return points;
+            }
+            split(circle) {
+                let ps = this.nearest(circle.p);
+                let ts = [];
+                for (let i = 0; i < 3; ++i) {
+                    let vrts = [this.vertices[i], ps[i], ps[(i+2)%3]];
+                    let tri = new Triangle(vrts, [this.arcs[i], circle, this.arcs[(i+2)%3]]);
+                    ts.push(tri);
+                }
+                return ts;
             }
         }
 
         window.addEventListener("load", () => {
             let cnv = document.getElementById("cnv");
             let cnt = cnv.getContext("2d");
-            let triangle = new Triangle(
-                [new Vec2(400.0, 100.0), new Vec2(53.0, 700.0), new Vec2(800.0 - 53.0, 700.0)],
-                [1e-3, 4e-4, 0]
-            );
-            triangle.draw_inner(cnt, 1);
+            let vrts = [new Vec2(400.0, 100.0), new Vec2(53.0, 700.0), new Vec2(800.0 - 53.0, 700.0)];
+            let triangle = new Triangle(vrts, [
+                new Segment(vrts[0], vrts[1], 0),
+                new Segment(vrts[1], vrts[2], 1e-6),
+                new Segment(vrts[2], vrts[0], 0),
+            ]);
+
+            cnt.fillStyle = "rgb(0,0,0)";
+            triangle.draw(cnt);
+            cnt.fill();
+            
+            cnt.fillStyle = "rgb(255,255,255)";
+            let minrad = 2;
+            let stack = [triangle];
+            while (true) {
+                if (stack.length <= 0) {
+                    break;
+                }
+                let tri = stack.pop();
+                let circle = tri.incircle();
+                cnt.beginPath();
+                circle.draw(cnt);
+                cnt.fill();
+                if (circle.r >= minrad) {
+                    let ts = tri.split(circle);
+                    for (let i = 0; i < 3; ++i) {
+                        stack.push(ts[i]);
+                    }
+                }
+            }
         });
     </script>
     <style type="text/css">
