--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <li><a href="./common-mother.html">common-mother</a> - simple simulation to prove the Mitochondrial Eve hypothesis</li>
         <li><a href="./slopes.html">slopes</a> - draws a fractal function</li> 
         <li><a href="./intfract.html">intfract</a> - renders an fractal based on Fibonacci numbers in high resolution</li>
+        <li><a href="./circle-tiling.html">circle-tiling</a> - renders a recursive circle tiling inside a triangle</li>
     </ul>
 </body>
 </html>
